# knowledgebaseragsystem

./: README.md
AIConversational/: README.md  index.html  package-lock.json  package.json
AIConversational/src/: App.jsx  styles.css
AIConversational/src/components/: ChatComposer.jsx  MessageThread.jsx  SessionSidebar.jsx  SourceDrawer.jsx
AIConversational/src/services/: api.js
LLMAPI/: .env  README.md  chat_history_schema.sql  pyproject.toml
LLMAPI/app/: __init__.py  main.py
LLMAPI/app/api/: routes.py  schemas.py
LLMAPI/app/core/: config.py  logging.py
LLMAPI/app/db/: session.py
LLMAPI/app/services/: embeddings.py  gemini_llm.py  rag.py  retriever.py
LLMAPI/llmapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
LLMDataPipeline/: .env  README.md  docker-compose.yml  pyproject.toml
LLMDataPipeline/app/: __init__.py
LLMDataPipeline/app/cli/: main.py
LLMDataPipeline/app/core/: config.py  logging.py
LLMDataPipeline/app/db/: models.py  session.py
LLMDataPipeline/app/embeddings/: sentence_transformer.py
LLMDataPipeline/app/graph/: state.py  workflow.py
LLMDataPipeline/app/parsers/: base.py  docx_parser.py  pdf_parser.py  text_parser.py
LLMDataPipeline/app/repositories/: ingestion.py
LLMDataPipeline/app/services/: checkpoint.py  checksum.py  chunking.py  discovery.py  parser_registry.py
LLMDataPipeline/docker/: Dockerfile
LLMDataPipeline/llm_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
LLMDataPipeline/tests/: test_chunking.py
